@@ -1,0 +1,10 @@
+#!/usr/bin/perl -w
+
+BEGIN { print "1..1\n"; }
+
+use strict;
+use Wx;
+use Wx::Media;
+
+print "ok\n";
+
